unpackaged/main/default/objects/PaymentAuthorization/fields/authorizationRequestId__c.field-meta.xml
<CustomField>
    <fullName>authorizationRequestId__c</fullName>
    <label>Authorization Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>