unpackaged/main/default/objects/PaymentAuthorization/fields/customerToken__c.field-meta.xml
<CustomField>
    <fullName>customerToken__c</fullName>
    <label>Customer Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>