unpackaged/main/default/objects/PaymentAuthorization/fields/CustomerTokenDeletionStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerTokenDeletionStatus__c</fullName>
    <label>Customer Token Deletion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deletion Error</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>