unpackaged/main/default/objects/PaymentAuthorization/fields/orderRequestID__c.field-meta.xml
<CustomField>
    <fullName>orderRequestID__c</fullName>
    <label>Paypal Order Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>