unpackaged/main/default/objects/PaymentAuthorization/fields/paypalCustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>paypalCustomerEmail__c</fullName>
    <label>Paypal Customer Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>